--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,12 @@ RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    assertthat,
+    dplyr,
+    glue,
+    magrittr,
+    rvest,
+    stringr,
+    tidytext,
+    xml2
